--- a/styles.css
+++ b/styles.css
@@ -82,12 +82,12 @@ li:hover {
     line-height: 0.9;
     padding: 0;
     margin: 8px;
-    font-size:12px;
+    font-size:0.75vw;
 }
 
 .locNum {
     font-weight: bolder;
-    font-size: 36px;
+    font-size: 2vw;
 }
 
 #locTable {
@@ -119,7 +119,7 @@ td {
 }
 
 #copyright {
-    font-size: 10px;
+    font-size: 0.50vw;
 }
 
 #bbb {
