--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,10 @@ body, html {
     width: 50%;
 }
 
+.textcenter {
+    text-align: center;
+}
+
 .noMarginPad {
     margin: 0;
     padding: 0;
@@ -114,8 +118,11 @@ td {
 
 /* Content Images */
 #why-wait-img {
-    width: 80%;
-    margin-left: 30px;
+    width: 85%;
+}
+#why-wait-div {
+    margin-left: 80px;
+    font-weight: 600;
 }
 
 #fast-free-img {
@@ -126,6 +133,17 @@ td {
 
 #bbb-img {
     width:20%;
+}
+
+#sf-sewer-repair {
+    color: rgb(0, 104, 0);
+    font-weight: bolder;
+}
+
+#we-offer {
+    font-size: medium;
+    margin: 0;
+    padding: 0;
 }
 
 /* Bottom of the page */
@@ -140,7 +158,7 @@ td {
 }
 
 #copyright {
-    font-size: 0.50vw;
+    font-size: 0.80vw;
 }
 
 #bbb-footer {
