--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body, html {
     background-color: black;
 }
 
-.center {
+.centerCSS {
     display: block;
     margin: 0% auto;
     width: 50%;
@@ -27,6 +27,22 @@ body, html {
     padding: 0;
     font-weight: bolder;
 }
+
+.pBold {
+    font-weight: 700;
+}
+
+#services-title {
+    color: red;
+    font-weight: bolder;
+}
+
+#services-body1 {
+    margin-left: 10%;
+    margin-right: 5%;
+    line-height: 15px;
+}
+
 
 /* Top of the page */
 
@@ -170,6 +186,7 @@ td {
 .footerImg {
     height: 22px;
 }
+
 
 /* =====Page Services===== */
 
