--- a/styles.css
+++ b/styles.css
@@ -256,6 +256,10 @@ td {
 
 /* =====Page Residential===== */
 
+#residential-bathroom-img {
+    float: right;
+    padding-left: 3%;
+}
 
 
 /* =====Page Commercial===== */
